src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A30.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A30 {
  class C1 {
    List<String> a;
  }
  class C2 {
    Optional<String> a;
  }
  class C3 {
    Set<String> a;
  }
}
